--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@ h1 {
 .song-form {
     display: flex;
     justify-content: space-evenly;
+    background-color: brown;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .song-text {
@@ -25,22 +28,39 @@ h1 {
 
 .song-header {
     display: flex;
-    justify-content: space-evenly; 
+    justify-content: space-evenly;
+    background-color: rgb(216, 43, 43); 
+    border: solid 3px;
+    margin-top: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .song-header__item {
     font-weight: bold;
     font-size: 18px;
     flex-basis: 20%;
+    color: white;
+    display: block;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
-.song-list {
+.song-list-row {
     display: flex;
     justify-content: space-evenly;
+    background-color: rgb(219, 104, 96);
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 2px;
 }
 
 .list-item {
     flex-basis: 20%;
+    color: white;
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .deleteButton{
