--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,8 @@ h1 {
     margin-bottom: 5px;
 }
 
-.deleteButton{
+.clear-button{
     height: 30px;
-    margin-top: 15px;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
