--- a/src/App.css
+++ b/src/App.css
@@ -26,49 +26,35 @@ h1 {
     flex-basis: 20%;
 }
 
-.song-header {
-    display: flex;
-    justify-content: space-evenly;
-    background-color: rgb(216, 43, 43); 
-    border: solid 3px;
+table {
+    width: 100%;
     margin-top: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
+    border-collapse: collapse;
 }
 
-.song-header__item {
+.song-header {
+    background-color: rgb(216, 43, 43); 
+}
+
+.song-header__item { 
     font-weight: bold;
     font-size: 18px;
-    flex-basis: 20%;
     color: white;
-    display: block;
-    margin-top: 8px;
-    margin-bottom: 8px;
+}
+
+.title-buttons {
+    margin-left: 10px;
+}
+
+.sort-buttons-right {
+    margin-left: 2px;
 }
 
 .song-list-row {
-    display: flex;
-    justify-content: space-evenly;
     background-color: rgb(219, 104, 96);
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 2px;
 }
 
 .list-item {
-    flex-basis: 20%;
     color: white;
-    display: block;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.deleteButton{
-    height: 30px;
-    margin-top: 15px;
-}
-
-.sort-buttons {
-    margin-top: 8px;
-    margin-bottom: 8px;
+    text-align: center;
 }
